# blockio-uring

./: .gitignore  CHANGELOG.md  README.md  bench_randread.fio  blockio-uring.cabal  cabal.project
.github/: CODEOWNERS
.github/workflows/: haskell.yml
System/IO/: BlockIO.hs
System/IO/BlockIO/: URing.hs  URingFFI.hsc
benchmark/: Bench.hs  randread.fio
blockio-osx/: CHANGELOG.md  README.md  blockio-osx.cabal
blockio-osx/benchmark/: Bench.hs  randread_macos_posixaio.fio  randread_macos_psync.fio
blockio-osx/cbits/: darwin_io.c  darwin_io.h
blockio-osx/docs/: BENCH_DARWIN.md  README_DARWIN.md
blockio-osx/src/System/IO/BlockIO/: DarwinFFI.hsc  OSX.hs  URing.hs
blockio-osx/test/: test-internals.hs  test.hs
blockio-uring/: LICENSE  README.md  blockio-uring.cabal
blockio-uring/benchmark/: Bench.hs  randread.fio
blockio-uring/src/System/IO/: BlockIO.hs
blockio-uring/src/System/IO/BlockIO/: URingFFI.hsc
blockio-uring/test/: test-internals.hs  test.hs
src/System/IO/: BlockIO.hs
src/System/IO/BlockIO/: URing.hs  URingFFI.hsc
test/: Main.hs  Test.hs  test-internals.hs  test-uninterruptible-sleep.hs  test.hs
